Capitulo_8_Ingress/host-ingress-kuard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress-kuard
spec:
  rules:
  - host: kuard.example.com
    http:
      paths:
      - backend:
          service:
            name: kuard
            port:
              number: 8080
        pathType: Prefix
        path: /
