Capitulo_8_Ingress/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: envoy
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: example-ingress
spec:
  rules:
  - host: alpaca.example.com
    http:
      paths:
      - backend:
          service:
            name: alpaca
            port:
              number: 8080
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - alpaca.example.com
    secretName: secret-name
